fixed the overflowing content on the right side

--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@ body {
     line-height: 1.5;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: 500;
-    overflow-y: auto;
 }
 
 .container {
     display: flex;
+    height: 100%;
 }
 
 .left-side {
@@ -33,6 +33,7 @@ body {
     background-color: #2f2c2b;
     width: 100%;
     color: white;
+    overflow-y: auto;
 }
 
 .todo-container {
